--- a/Assignment1_MachineLearning_Semester2023A/Assignment1.ipynb
+++ b/Assignment1_MachineLearning_Semester2023A/Assignment1.ipynb
@@ -1341,25 +1341,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "45fbed94",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "66.34844868735084 %\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_train_2 = classifier.predict(X_train_normalized)\n",
-    "print(accuracy_score(y_train, y_train_2) * 100, '%')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2b01a94b",
    "metadata": {},
@@ -1369,10 +1350,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "e4af50ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "    Negative       0.63      1.00      0.77       113\n",
+      "    Positive       0.00      0.00      0.00        67\n",
+      "\n",
+      "    accuracy                           0.63       180\n",
+      "   macro avg       0.31      0.50      0.39       180\n",
+      "weighted avg       0.39      0.63      0.48       180\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\win10\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\win10\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\win10\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
    "source": [
     "target_names = ['Negative', 'Positive']\n",
     "print('Classification report: \\n', classification_report(y_test, y_pred,target_names=target_names))"
@@ -1388,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "42993e64",
    "metadata": {},
    "outputs": [],
